Fixing carousels z-index to make it work with the RGB lighting feature.

--- a/public/stylesheets/components/carousels/Carousel.module.css
+++ b/public/stylesheets/components/carousels/Carousel.module.css
@@ -72,6 +72,7 @@
     display: flex;
 	width: 100%;
 	position: relative;
+	z-index: 1;
 }
 .container[data-direction="vertical"] {
 	flex-direction: column;
